--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "lodash": "^4.17.21",
+    "pinia": "^2.0.30",
+    "vue": "^3.2.13",
+    "vue-cute-timeline": "^1.2.10",
+    "vue-router": "4",
+    "vue3-timeline": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +26,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
     "root": true,
